--- a/CSS/Modal.css
+++ b/CSS/Modal.css
@@ -15,13 +15,13 @@
   margin: 10% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 30%;
+  width: 40%;
   border-radius: 10px;
   text-align: center;
 }
 
 .modal-content img {
-  width: 400px;
+  max-width: 70%;
   height: auto;
 }
 
@@ -39,5 +39,5 @@
   cursor: pointer;
 }
 #modalTitle {
-  font-size: 2rem;
+  font-size: 190%;
 }
