--- a/CSS/grid.css
+++ b/CSS/grid.css
@@ -25,4 +25,18 @@
   .modal-content {
     font-size: 10px;
   }
+  .cine {
+    width: 400px;
+    height: auto;
+  }
+  .content h1 {
+    font-size: 40px;
+  }
+
+  .content2 p {
+    font-size: 20px;
+  }
+  .title h1 {
+    font-size: 40px;
+  }
 }
